deploy/overlays/vm/frontend/patch-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questify-frontend
spec:
  template:
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: configuration.conf
                path: configuration.conf
              - key: rewrite-mixed-content.js
                path: rewrite-mixed-content.js
      containers:
        - name: frontend
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: configuration.conf
              readOnly: true
            - name: nginx-config
              mountPath: /usr/share/nginx/html/rewrite-mixed-content.js
              subPath: rewrite-mixed-content.js
              readOnly: true
