deploy/overlays/vm/frontend/ingress-tailscale1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: questify
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
    - host: questify-1.tail03c40b.ts.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: questify-frontend
                port:
                  number: 80

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: questify-frontend
                port:
                  number: 80

          - path: /s3
            pathType: Prefix
            backend:
              service:
                name: questify-frontend
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: questify-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - questify-1.tail03c40b.ts.net
        - questify-1
